<resources>
    <string name="app_name" translatable="false">VV租行</string>

    <!-- 时间选择-->
    <string name="action_settings">Settings</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="time_next">Next</string>
    <string name="time_prev">Previous</string>
    <string-array name="weeks">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>日</item>
    </string-array>

    <!--个人注册-->
    <string name="registered">注册</string>
    <string name="tv_shenqing">您的申请尚未通过***企业审核，\n请与企业负责人联系。</string>
    <string name="btn_queding">确定</string>
    <string name="btn_abandon">放弃申请</string>
    <string name="tv_reg_texts">您的申请已通过企业审核，存在\n于***企业，可登陆VV平台进行\n相关操作。</string>
    <string name="dialog_login">立即登录</string>
    <string name="set_pwd">设置密码</string>
    <string name="person_register">个人注册</string>
    <string name="text_vv">点击注册即代表同意</string>
    <string name="text_vv_login">点击登录即代表同意</string>
    <string name="text_vvservice">VV服务条款</string>
    <string name="forget_password">忘记密码</string>
    <!--企业注册-->
    <string name="tv_dialog_login">
        您注册的手机号码已存在于%1$s企\n业，继续注册，原单位将不能使\n用此手机号登陆VV租行管理平台\n。如需帮助，请联系平台客服人员。
    </string>
    <string name="dialog_register">继续注册</string>
    <string name="btn_two_abandon">确定</string>
    <string name="tv_invitecode">您输入的邀请码来自***，完成注\n册后与对方直接建立关系。您可\n以登陆平台，对您的伙伴进行邀\n请，共享智慧租行体验。</string>


    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <string name="pull_header_hint_normal">下拉刷新</string>
    <string name="pull_header_hint_ready">松开刷新数据</string>
    <string name="pull_header_hint_loading">正在加载...</string>
    <string name="pull_header_last_time">上次更新时间：</string>
    <string name="pull_footer_hint_normal">查看更多...</string>
    <string name="pull_footer_hint_ready">松开载入更多</string>


    <string name="msg_no_camera">没有系统相机</string>
    <string name="camera">拍照</string>
    <string name="gallery">相册</string>
    <string name="cancel">取消</string>

    <string name="mis_permission_dialog_title">权限拒绝</string>
    <string name="mis_permission_dialog_ok">好</string>
    <string name="mis_permission_dialog_cancel">拒绝</string>
    <string name="mis_permission_rationale_write_storage">需要您提供写/读存储权限</string>
    <string name="title_activity_value_added_tax_invoice">ValueAddedTaxInvoiceActivity</string>
    <string name="title_activity_enterprises_card">EnterprisesCardActivity</string>


    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>

</resources>
