<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rela_progress"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:background="@drawable/book_shadow_bg"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/linea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_reg_clean"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:src="@drawable/clean"/>
            <ImageView
                android:id="@+id/iv_mes_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/message"/>
            <TextView
                android:id="@+id/tv_regster_text"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_texts"
                android:maxLines="3"/>
            <RelativeLayout
                android:id="@+id/rela_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_login_reg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/selector_button"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="70dp"
                    android:text="@string/dialog_login"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/btn_setpwd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/selector_button"
                    android:text="@string/set_pwd"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="75dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
                <Button
                    android:id="@+id/btn_abandon"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/selector_button"
                    android:text="@string/btn_abandon"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>