<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/rela_progress"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@drawable/book_shadow_bg"
        android:gravity="center">


        <LinearLayout
            android:id="@+id/linea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_dialog_clean"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:src="@drawable/clean"/>


            <ImageView
                android:id="@+id/iv_message_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/message"/>

            <TextView
                android:id="@+id/tv_reg_text"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_dialog_login"
                android:maxLines="4"/>



            <RelativeLayout
                android:id="@+id/rela_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/selector_button"
                    android:text="@string/dialog_login"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="70dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/btn_dialog_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/selector_button"
                    android:text="@string/dialog_register"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"/>

            </RelativeLayout>


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>